Add internal pullups for button inputs

--- a/denmark.ioc
+++ b/denmark.ioc
@@ -199,12 +199,14 @@ PB3.Signal=SYS_JTDO-SWO
 PB4.Locked=true
 PB4.Mode=JTAG_5_pins
 PB4.Signal=SYS_JTRST
-PB6.GPIOParameters=GPIO_Label
+PB6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB6.GPIO_Label=BUTTON1_INPUT
+PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Locked=true
 PB6.Signal=GPIO_Input
-PB7.GPIOParameters=GPIO_Label
+PB7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB7.GPIO_Label=BUTTON2_INPUT
+PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.Locked=true
 PB7.Signal=GPIO_Input
 PB8.GPIOParameters=GPIO_Label
@@ -237,16 +239,19 @@ PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=SOFTCLIP_LF_AMP
 PC12.Locked=true
 PC12.Signal=GPIO_Input
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
+PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=BUTTON5_INPUT
+PC13-ANTI_TAMP.GPIO_PuPd=GPIO_PULLUP
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Input
-PC14-OSC32_IN.GPIOParameters=GPIO_Label
+PC14-OSC32_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC14-OSC32_IN.GPIO_Label=BUTTON4_INPUT
+PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLUP
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Input
-PC15-OSC32_OUT.GPIOParameters=GPIO_Label
+PC15-OSC32_OUT.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=BUTTON3_INPUT
+PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=GPIO_Input
 PC2.GPIOParameters=GPIO_Label
