Add fan control

--- a/denmark.ioc
+++ b/denmark.ioc
@@ -181,8 +181,9 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=LED_MODE_4
 PA7.Locked=true
 PA7.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=GPIO_Speed,GPIO_Label
 PA8.GPIO_Label=FAN_PWM
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=LED_FAULT_2
@@ -393,8 +394,13 @@ SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM5_CH4.0=TIM5_CH4,Input_Capture4_from_TI4
 SH.S_TIM5_CH4.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Period,AutoReloadPreload,OCMode_PWM-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,OCPolarity_1
+TIM1.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM1
+TIM1.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM1.Period=3360
+TIM1.Pulse-PWM\ Generation1\ CH1=1000
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.IPParameters=Channel-PWM Generation3 CH3
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
