--- a/denmark.ioc
+++ b/denmark.ioc
@@ -133,6 +133,7 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_BRK_TIM9_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_BRK_TIM9_IRQn
 NVIC.TimeBaseIP=TIM9
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -163,8 +164,6 @@ PA15.Signal=SYS_JTDI
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=THERM3_ANALOG_INPUT
 PA2.Signal=ADCx_IN2
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=FAN_PWM_IN
 PA3.Signal=S_TIM5_CH4
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=STANDBY_MF_AMP
@@ -405,8 +404,9 @@ TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.IPParameters=Channel-PWM Generation3 CH3
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1
+TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM5.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
-TIM5.IPParameters=Channel-Input_Capture4_from_TI4
+TIM5.IPParameters=Channel-Input_Capture4_from_TI4,AutoReloadPreload
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim9.Mode=TIM9
