--- a/denmark.ioc
+++ b/denmark.ioc
@@ -36,83 +36,72 @@ FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NU
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2S2.ErrorAudioFreq=1.72 %
-I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_ENABLE
-I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
-I2S2.Instance=SPI$Index
-I2S2.RealAudioFreq=8.138 KHz
-I2S2.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP10=TIM3
-Mcu.IP11=TIM5
+Mcu.IP10=TIM5
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
-Mcu.IP4=I2S2
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TIM1
-Mcu.IP9=TIM2
-Mcu.IPNb=12
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM2
+Mcu.IP9=TIM3
+Mcu.IPNb=11
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA1
-Mcu.Pin11=PA2
-Mcu.Pin12=PA3
-Mcu.Pin13=PA4
-Mcu.Pin14=PA5
-Mcu.Pin15=PA6
-Mcu.Pin16=PA7
-Mcu.Pin17=PC4
-Mcu.Pin18=PC5
-Mcu.Pin19=PB0
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PA4
+Mcu.Pin13=PA5
+Mcu.Pin14=PA6
+Mcu.Pin15=PA7
+Mcu.Pin16=PC4
+Mcu.Pin17=PC5
+Mcu.Pin18=PB0
+Mcu.Pin19=PB1
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB1
-Mcu.Pin21=PB2
-Mcu.Pin22=PB10
-Mcu.Pin23=PB12
-Mcu.Pin24=PB13
-Mcu.Pin25=PB14
-Mcu.Pin26=PB15
-Mcu.Pin27=PC6
-Mcu.Pin28=PC7
-Mcu.Pin29=PC8
+Mcu.Pin20=PB2
+Mcu.Pin21=PB10
+Mcu.Pin22=PB14
+Mcu.Pin23=PB15
+Mcu.Pin24=PC7
+Mcu.Pin25=PC8
+Mcu.Pin26=PC9
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA10
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PC9
-Mcu.Pin31=PA8
-Mcu.Pin32=PA9
-Mcu.Pin33=PA10
-Mcu.Pin34=PA11
-Mcu.Pin35=PA12
-Mcu.Pin36=PA13
-Mcu.Pin37=PA14
-Mcu.Pin38=PA15
-Mcu.Pin39=PC10
+Mcu.Pin30=PA11
+Mcu.Pin31=PA12
+Mcu.Pin32=PA13
+Mcu.Pin33=PA14
+Mcu.Pin34=PA15
+Mcu.Pin35=PC10
+Mcu.Pin36=PC11
+Mcu.Pin37=PC12
+Mcu.Pin38=PD2
+Mcu.Pin39=PB3
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=PC11
-Mcu.Pin41=PC12
-Mcu.Pin42=PD2
-Mcu.Pin43=PB3
-Mcu.Pin44=PB4
-Mcu.Pin45=PB6
-Mcu.Pin46=PB7
-Mcu.Pin47=PB8
-Mcu.Pin48=PB9
-Mcu.Pin49=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin40=PB4
+Mcu.Pin41=PB6
+Mcu.Pin42=PB7
+Mcu.Pin43=PB8
+Mcu.Pin44=PB9
+Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin46=VP_SYS_VS_tim9
+Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_SYS_VS_tim9
-Mcu.Pin51=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin6=PC1
-Mcu.Pin7=PC2
-Mcu.Pin8=PC3
-Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=52
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA1
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -165,9 +154,10 @@ PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=THERM3_ANALOG_INPUT
 PA2.Signal=ADCx_IN2
 PA3.Signal=S_TIM5_CH4
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=PinState,GPIO_Label
 PA4.GPIO_Label=STANDBY_MF_AMP
 PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=IR_SIGNAL_OUT
@@ -199,14 +189,6 @@ PB1.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=USER_LED_PWM
 PB10.Signal=S_TIM2_CH3
-PB12.GPIOParameters=GPIO_Label
-PB12.GPIO_Label=I2S_WCLK
-PB12.Mode=Full_Duplex_Master
-PB12.Signal=I2S2_WS
-PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=I2S_BCLK
-PB13.Mode=Full_Duplex_Master
-PB13.Signal=I2S2_CK
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LED_FAULT_6
 PB14.Locked=true
@@ -242,26 +224,30 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=I2C_SDA
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC0.GPIOParameters=GPIO_Label
+PC0.GPIOParameters=PinState,GPIO_Label
 PC0.GPIO_Label=MUTE_HF_AMP
 PC0.Locked=true
+PC0.PinState=GPIO_PIN_SET
 PC0.Signal=GPIO_Output
-PC1.GPIOParameters=GPIO_Label
+PC1.GPIOParameters=PinState,GPIO_Label
 PC1.GPIO_Label=STANDBY_HF_AMP
 PC1.Locked=true
+PC1.PinState=GPIO_PIN_SET
 PC1.Signal=GPIO_Output
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=LED_MONITOR_1
 PC10.Locked=true
 PC10.Signal=GPIO_Output
-PC11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PC11.GPIO_Label=STANDBY_LF_AMP
-PC11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PC11.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC11.GPIO_Label=STANDBY_LF_AMP_OPUTPUT
+PC11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PC11.GPIO_PuPd=GPIO_NOPULL
 PC11.Locked=true
+PC11.PinState=GPIO_PIN_SET
 PC11.Signal=GPIO_Output
-PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=SOFTCLIP_LF_AMP
+PC12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC12.GPIO_Label=SOFTCLIP_LF_AMP_INPUT
+PC12.GPIO_PuPd=GPIO_PULLUP
 PC12.Locked=true
 PC12.Signal=GPIO_Input
 PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -279,14 +265,11 @@ PC15-OSC32_OUT.GPIO_Label=BUTTON3_INPUT
 PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=GPIO_Input
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=I2S_DI
-PC2.Mode=Full_Duplex_Master
-PC2.Signal=I2S2_ext_SD
-PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=I2S_DO
-PC3.Mode=Full_Duplex_Master
-PC3.Signal=I2S2_SD
+PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC3.GPIO_Label=STANDBY_PROTECT_LF_INPUT
+PC3.GPIO_PuPd=GPIO_PULLUP
+PC3.Locked=true
+PC3.Signal=GPIO_Input
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=LED_MODE_3
 PC4.Locked=true
@@ -295,10 +278,6 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=LED_MODE_2
 PC5.Locked=true
 PC5.Signal=GPIO_Output
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=I2S_MCLK
-PC6.Mode=Master_Clock_Activated
-PC6.Signal=I2S2_MCK
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=LED_FAULT_5
 PC7.Locked=true
@@ -311,9 +290,10 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=LED_FAULT_3
 PC9.Locked=true
 PC9.Signal=GPIO_Output
-PD2.GPIOParameters=GPIO_Label
+PD2.GPIOParameters=PinState,GPIO_Label
 PD2.GPIO_Label=MUTE_MF_AMP
 PD2.Locked=true
+PD2.PinState=GPIO_PIN_SET
 PD2.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
