Add fan speed messages. Standby turns off fan.

--- a/denmark.ioc
+++ b/denmark.ioc
@@ -70,38 +70,39 @@ Mcu.Pin20=PB2
 Mcu.Pin21=PB10
 Mcu.Pin22=PB14
 Mcu.Pin23=PB15
-Mcu.Pin24=PC7
-Mcu.Pin25=PC8
-Mcu.Pin26=PC9
-Mcu.Pin27=PA8
-Mcu.Pin28=PA9
-Mcu.Pin29=PA10
+Mcu.Pin24=PC6
+Mcu.Pin25=PC7
+Mcu.Pin26=PC8
+Mcu.Pin27=PC9
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PA11
-Mcu.Pin31=PA12
-Mcu.Pin32=PA13
-Mcu.Pin33=PA14
-Mcu.Pin34=PA15
-Mcu.Pin35=PC10
-Mcu.Pin36=PC11
-Mcu.Pin37=PC12
-Mcu.Pin38=PD2
-Mcu.Pin39=PB3
+Mcu.Pin30=PA10
+Mcu.Pin31=PA11
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PA15
+Mcu.Pin36=PC10
+Mcu.Pin37=PC11
+Mcu.Pin38=PC12
+Mcu.Pin39=PD2
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=PB4
-Mcu.Pin41=PB6
-Mcu.Pin42=PB7
-Mcu.Pin43=PB8
-Mcu.Pin44=PB9
-Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin46=VP_SYS_VS_tim9
-Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin40=PB3
+Mcu.Pin41=PB4
+Mcu.Pin42=PB6
+Mcu.Pin43=PB7
+Mcu.Pin44=PB8
+Mcu.Pin45=PB9
+Mcu.Pin46=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin47=VP_SYS_VS_tim9
+Mcu.Pin48=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=48
+Mcu.PinsNb=49
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -278,6 +279,11 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=LED_MODE_2
 PC5.Locked=true
 PC5.Signal=GPIO_Output
+PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC6.GPIO_Label=GENERAL_INPUT_1
+PC6.GPIO_PuPd=GPIO_PULLUP
+PC6.Locked=true
+PC6.Signal=GPIO_Input
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=LED_FAULT_5
 PC7.Locked=true
@@ -327,7 +333,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2S2_Init-I2S2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
