Add infrared RC5 protocol

--- a/denmark.ioc
+++ b/denmark.ioc
@@ -388,8 +388,14 @@ TIM1.Period=3360
 TIM1.Pulse-PWM\ Generation1\ CH1=1000
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.IPParameters=Channel-PWM Generation3 CH3
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1
+TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,ClockDivision,Period,OCFastMode_PWM-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,AutoReloadPreload,OCPolarity_1
+TIM3.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_DISABLE
+TIM3.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM3.Period=2333
+TIM3.Pulse-PWM\ Generation1\ CH1=1105
 TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM5.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM5.IPParameters=Channel-Input_Capture4_from_TI4,AutoReloadPreload
