Restore previous state of amplifiers after loading DSP

--- a/denmark.ioc
+++ b/denmark.ioc
@@ -31,9 +31,10 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=ADC1
 Dma.RequestsNb=1
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configUSE_PREEMPTION
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
+FREERTOS.configUSE_PREEMPTION=0
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
